include_directories(include include/lua)
include_directories(include include/intlib)
include_directories(include include/lua)
include_directories(include include/sol)
include_directories(include include/raf)
include_directories(include ../gamed/include)

file(GLOB enet_src src/enet/*.c)
file(GLOB intlib_src src/intlib/*.cpp)
file(GLOB lua_src src/lua/*.c)
file(GLOB raf_src src/raf/*.cpp)

add_library(enet ${enet_src})
add_library(intlib ${intlib_src})
add_library(lua ${lua_src})
add_library(raf ${raf_src})
